--- a/package.json
+++ b/package.json
@@ -1,68 +1,57 @@
 {
-  "name": "@jetpomelo/applets-template",
+  "name": "@jetplomelo/template",
   "version": "1.0.0",
   "private": true,
-  "description": "",
+  "description": "应用模板",
+  "author": "南京蜗壳科技有限公司",
+  "license": "MIT",
   "templateInfo": {
     "name": "redux",
-    "typescript": true,
-    "css": "sass"
+    "css": "less",
+    "typescript": true
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "build:weapp": "taro build --type weapp",
+    "build:rn": "taro build --type rn --watch"
   },
   "browserslist": [
     "last 3 versions",
     "Android >= 4.1",
     "ios >= 8"
   ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.0.16",
-    "@tarojs/react": "3.0.16",
-    "@tarojs/runtime": "3.0.16",
-    "@tarojs/taro": "3.0.16",
-    "ahooks": "^2.9.1",
-    "immer": "^7.0.14",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "@tarojs/components": "3.2.0-canary.2",
+    "@tarojs/react": "3.2.0-canary.2",
+    "@tarojs/rn-runner": "^3.2.0-canary.2",
+    "@tarojs/runtime": "3.2.0-canary.2",
+    "@tarojs/taro": "3.2.0-canary.2",
+    "@tarojs/taro-rn": "^3.2.0-canary.2",
+    "immer": "^8.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.63.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.0.16",
-    "@tarojs/webpack-runner": "3.0.16",
-    "@types/react": "^16.0.0",
+    "@tarojs/mini-runner": "3.2.0-canary.2",
+    "@tarojs/webpack-runner": "3.2.0-canary.2",
+    "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^2.x",
-    "@typescript-eslint/parser": "^2.x",
-    "babel-preset-taro": "3.0.16",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.0.16",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "babel-preset-taro": "3.2.0-canary.2",
+    "eslint": "^7.15.0",
+    "eslint-config-taro": "3.2.0-canary.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "stylelint": "9.3.0",
-    "typescript": "^3.7.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "stylelint": "13.8.0",
+    "typescript": "^4.1.2"
   }
 }
