--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,7 @@
-.DS_Store
-node_modules/
-unpackage/
 dist/
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.project
+deploy_versions/
+.temp/
+.rn_temp/
+node_modules/
+.DS_Store
 .idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
