--- a/package.json
+++ b/package.json
@@ -1,96 +1,67 @@
 {
   "name": "@jetpomelo/template",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
+  "description": "",
+  "templateInfo": {
+    "name": "default",
+    "typescript": true,
+    "css": "sass"
+  },
   "scripts": {
-    "serve": "npm run dev:h5",
-    "build": "npm run build:h5",
-    "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
-    "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
-    "build:h5": "cross-env NODE_ENV=production UNI_PLATFORM=h5 vue-cli-service uni-build",
-    "build:mp-360": "cross-env NODE_ENV=production UNI_PLATFORM=mp-360 vue-cli-service uni-build",
-    "build:mp-alipay": "cross-env NODE_ENV=production UNI_PLATFORM=mp-alipay vue-cli-service uni-build",
-    "build:mp-baidu": "cross-env NODE_ENV=production UNI_PLATFORM=mp-baidu vue-cli-service uni-build",
-    "build:mp-kuaishou": "cross-env NODE_ENV=production UNI_PLATFORM=mp-kuaishou vue-cli-service uni-build",
-    "build:mp-qq": "cross-env NODE_ENV=production UNI_PLATFORM=mp-qq vue-cli-service uni-build",
-    "build:mp-toutiao": "cross-env NODE_ENV=production UNI_PLATFORM=mp-toutiao vue-cli-service uni-build",
-    "build:mp-weixin": "cross-env NODE_ENV=production UNI_PLATFORM=mp-weixin vue-cli-service uni-build",
-    "build:quickapp-native": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-native vue-cli-service uni-build",
-    "build:quickapp-webview": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview vue-cli-service uni-build",
-    "build:quickapp-webview-huawei": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview-huawei vue-cli-service uni-build",
-    "build:quickapp-webview-union": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview-union vue-cli-service uni-build",
-    "dev:app-plus": "cross-env NODE_ENV=development UNI_PLATFORM=app-plus vue-cli-service uni-build --watch",
-    "dev:custom": "cross-env NODE_ENV=development uniapp-cli custom",
-    "dev:h5": "cross-env NODE_ENV=development UNI_PLATFORM=h5 vue-cli-service uni-serve",
-    "dev:mp-360": "cross-env NODE_ENV=development UNI_PLATFORM=mp-360 vue-cli-service uni-build --watch",
-    "dev:mp-alipay": "cross-env NODE_ENV=development UNI_PLATFORM=mp-alipay vue-cli-service uni-build --watch",
-    "dev:mp-baidu": "cross-env NODE_ENV=development UNI_PLATFORM=mp-baidu vue-cli-service uni-build --watch",
-    "dev:mp-kuaishou": "cross-env NODE_ENV=development UNI_PLATFORM=mp-kuaishou vue-cli-service uni-build --watch",
-    "dev:mp-qq": "cross-env NODE_ENV=development UNI_PLATFORM=mp-qq vue-cli-service uni-build --watch",
-    "dev:mp-toutiao": "cross-env NODE_ENV=development UNI_PLATFORM=mp-toutiao vue-cli-service uni-build --watch",
-    "dev:mp-weixin": "cross-env NODE_ENV=development UNI_PLATFORM=mp-weixin vue-cli-service uni-build --watch",
-    "dev:quickapp-native": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-native vue-cli-service uni-build --watch",
-    "dev:quickapp-webview": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview vue-cli-service uni-build --watch",
-    "dev:quickapp-webview-huawei": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview-huawei vue-cli-service uni-build --watch",
-    "dev:quickapp-webview-union": "cross-env NODE_ENV=development UNI_PLATFORM=quickapp-webview-union vue-cli-service uni-build --watch",
-    "info": "node node_modules/@dcloudio/vue-cli-plugin-uni/commands/info.js",
-    "serve:quickapp-native": "node node_modules/@dcloudio/uni-quickapp-native/bin/serve.js",
-    "test:android": "cross-env UNI_PLATFORM=app-plus UNI_OS_NAME=android jest -i",
-    "test:h5": "cross-env UNI_PLATFORM=h5 jest -i",
-    "test:ios": "cross-env UNI_PLATFORM=app-plus UNI_OS_NAME=ios jest -i",
-    "test:mp-baidu": "cross-env UNI_PLATFORM=mp-baidu jest -i",
-    "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i"
-  },
-  "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-30520210106003",
-    "@dcloudio/uni-h5": "^2.0.0-30520210106003",
-    "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-mp-360": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-qq": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-vue": "^2.0.0-30520210106003",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-30520210106003",
-    "@dcloudio/uni-quickapp-native": "^2.0.0-30520210106003",
-    "@dcloudio/uni-quickapp-webview": "^2.0.0-30520210106003",
-    "@dcloudio/uni-stat": "^2.0.0-30520210106003",
-    "@dcloudio/uni-ui": "^1.2.10",
-    "@vue/shared": "^3.0.0",
-    "core-js": "^3.6.5",
-    "flyio": "^0.6.2",
-    "regenerator-runtime": "^0.13.7",
-    "vue": "^2.6.11",
-    "vuex": "^3.2.0"
-  },
-  "devDependencies": {
-    "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "^2.0.0-30520210106003",
-    "@dcloudio/uni-cli-shared": "^2.0.0-30520210106003",
-    "@dcloudio/uni-migration": "^2.0.0-30520210106003",
-    "@dcloudio/uni-template-compiler": "^2.0.0-30520210106003",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-30520210106003",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-30520210106003",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-30520210106003",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-30520210106003",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-30520210106003",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^26.6.3",
-    "mini-types": "*",
-    "miniprogram-api-typings": "*",
-    "postcss-comment": "^2.0.0",
-    "sass": "^1.32.4",
-    "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "build:weapp": "taro build --type weapp",
+    "build:swan": "taro build --type swan",
+    "build:alipay": "taro build --type alipay",
+    "build:tt": "taro build --type tt",
+    "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
+    "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
+    "build:quickapp": "taro build --type quickapp",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:swan": "npm run build:swan -- --watch",
+    "dev:alipay": "npm run build:alipay -- --watch",
+    "dev:tt": "npm run build:tt -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch",
+    "dev:qq": "npm run build:qq -- --watch",
+    "dev:jd": "npm run build:jd -- --watch",
+    "dev:quickapp": "npm run build:quickapp -- --watch"
   },
   "browserslist": [
-    "Android >= 4",
+    "last 3 versions",
+    "Android >= 4.1",
     "ios >= 8"
   ],
-  "uni-app": {
-    "scripts": {}
+  "author": "",
+  "dependencies": {
+    "@babel/runtime": "^7.7.7",
+    "@rematch/core": "^1.4.0",
+    "@rematch/immer": "^2.0.0-next.10",
+    "@tarojs/components": "3.0.25",
+    "@tarojs/react": "3.0.25",
+    "@tarojs/runtime": "3.0.25",
+    "@tarojs/taro": "3.0.25",
+    "immer": "^8.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.0.25",
+    "@tarojs/webpack-runner": "3.0.25",
+    "@types/react": "^17.0.0",
+    "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "babel-preset-taro": "3.0.25",
+    "eslint": "^7.18.0",
+    "eslint-config-taro": "3.0.25",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "stylelint": "13.9.0",
+    "typescript": "^4.1.3"
   }
 }
