💄 [feat] 酒店预订主页框架搭建

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "paths": {
       "@/components/*": ["./src/components/*"],
       "@/models/*": ["./src/models/*"],
+      "@/type/*": [
+        "./src/type/*"
+      ],
+      "@/assets/*": [
+        "./src/assets/*"
+      ]
     },
     "rootDir": ".",
     "jsx": "react",
