--- a/package.json
+++ b/package.json
@@ -36,28 +36,29 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@rematch/core": "^1.4.0",
-    "@rematch/immer": "^2.0.0-next.10",
-    "@tarojs/components": "3.0.25",
-    "@tarojs/react": "3.0.25",
-    "@tarojs/runtime": "3.0.25",
-    "@tarojs/taro": "3.0.25",
+    "@rematch/core": "^2.0.0",
+    "@rematch/immer": "^2.0.0",
+    "@tarojs/components": "3.0.26",
+    "@tarojs/react": "3.0.26",
+    "@tarojs/runtime": "3.0.26",
+    "@tarojs/taro": "3.0.26",
     "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.0.25",
-    "@tarojs/webpack-runner": "3.0.25",
+    "@tarojs/mini-runner": "3.0.26",
+    "@tarojs/webpack-runner": "3.0.26",
     "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "babel-preset-taro": "3.0.25",
-    "eslint": "^7.18.0",
-    "eslint-config-taro": "3.0.25",
+    "babel-preset-taro": "3.0.26",
+    "eslint": "^7.19.0",
+    "eslint-config-taro": "3.0.26",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
